# ROV-Workspace-New

./: .gitignore  Hardware Pins.xlsx  README.md  ROV25.docx  bridge.py  instructions.txt  run_tests.py  stream.py  technical_audit_report.md.resolved  udp_to_uart.py  اخر كود مافلينك شغال كويس.docx
ROV GUI Control/: App.xaml  App.xaml.cs  IWindowService.cs  MainWindow.xaml  MainWindow.xaml.cs  ModalResult.cs  ROV GUI Control.csproj  ROV GUI Control.sln  Settings.xaml  Settings.xaml.cs  SettingsWindowViewModel.cs  WindowService.cs  packages.config
ROV GUI Control/Commands/: RelayCommand.cs
ROV GUI Control/Converters/: BooleanToEnableDisableConverter.cs  FloatConverter.cs
ROV GUI Control/MAVLink/: MavlinkParse.cs  mavlink.cs
ROV GUI Control/Properties/: AssemblyInfo.cs  (+2 more)
STM32F405RGT6/: .cproject  .gitignore  SETUP_GUIDE.md  STM32F405RGT6.ioc
STM32F405RGT6/test/: CMakeLists.txt  README.md
STM32F405RGT6/test/mocks/: cmsis_os.h  stm32f4xx.h
STM32F405RGT6/test/renode/: run.resc  stm32f405_rov.repl
STM32F405RGT6/test/unit/: test_framework.h  test_main.c  test_mapping.c  test_pid.c
documentations/: documentation.md  technical_audit_report.md
docx/: Assiut Robotics - ROV Thrust Directions Table.docx  Camera streaming code using AForge.docx  Camera streaming code using OpenCVsharp.docx  MAVLink Code working good.docx  codes python for stream.docx
python/: main.py  mock_rov.py  uart_to_udp.py  udp_streamer.py
setups/: .gitignore  links.txt
tests/: test_gui_windows.py  test_python_core.py  test_stm32_firmware.py
xlsx/: Book1 (Autosaved).xlsx
(+90 files in other folders)
